--- a/indel.html
+++ b/indel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mutual Friends Network</title>
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 100 100'><rect width='100' height='100' fill='%230f0f14'/><line x1='50' y1='25' x2='25' y2='50' stroke='%23ea2864' stroke-width='2' opacity='0.6'/><line x1='50' y1='25' x2='75' y2='50' stroke='%23ea2864' stroke-width='2' opacity='0.6'/><line x1='25' y1='50' x2='50' y2='75' stroke='%23ea2864' stroke-width='2' opacity='0.6'/><line x1='75' y1='50' x2='50' y2='75' stroke='%23ea2864' stroke-width='2' opacity='0.6'/><line x1='25' y1='50' x2='75' y2='50' stroke='%23ea2864' stroke-width='1.5' opacity='0.4'/><line x1='50' y1='25' x2='50' y2='75' stroke='%23ea2864' stroke-width='1.5' opacity='0.4'/><circle cx='50' cy='25' r='10' fill='%23ea2864' opacity='0.9'/><circle cx='25' cy='50' r='8' fill='%23d64570' opacity='0.85'/><circle cx='75' cy='50' r='8' fill='%23d64570' opacity='0.85'/><circle cx='50' cy='75' r='12' fill='%23ea2864'/><circle cx='50' cy='50' r='6' fill='%23a8607a' opacity='0.8'/></svg>">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 100 100'><rect width='100' height='100' fill='%230f0f14'/><line x1='50' y1='25' x2='25' y2='50' stroke='%23ea2864' stroke-width='2' opacity='0.6'/><line x1='50' y1='25' x2='75' y2='50' stroke='%23ea2864' stroke-width='2' opacity='0.6'/><line x1='25' y1='50' x2='50' y2='75' stroke='%23ea2864' stroke-width='2' opacity='0.6'/><line x1='75' y1='50' x2='50' y2='75' stroke='%23ea2864' stroke-width='2' opacity='0.6'/><line x1='25' y1='50' x2='75' y2='50' stroke='%23ea2864' stroke-width='1.5' opacity='0.4'/><line x1='50' y1='25' x2='50' y2='75' stroke='%23ea2864' stroke-width='1.5' opacity='0.4'/><circle cx='50' cy='25' r='10' fill='%238b6cba' opacity='0.9'/><circle cx='25' cy='50' r='8' fill='%236b6b78' opacity='0.9'/><circle cx='75' cy='50' r='8' fill='%234a8fb8' opacity='0.9'/><circle cx='50' cy='75' r='12' fill='%23ea2864'/><circle cx='50' cy='50' r='6' fill='%238b6cba' opacity='0.85'/></svg>">
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.8.0/sql-wasm.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -634,22 +634,22 @@
         }
 
         .ranking-item.top-2 {
-            background: linear-gradient(135deg, rgba(214, 69, 112, 0.15), rgba(214, 69, 112, 0.05));
-            border-color: rgba(214, 69, 112, 0.3);
+            background: linear-gradient(135deg, rgba(139, 108, 186, 0.15), rgba(139, 108, 186, 0.05));
+            border-color: rgba(139, 108, 186, 0.3);
         }
 
         .ranking-item.top-2 .ranking-position {
-            background: linear-gradient(135deg, #d64570, #b83d62);
+            background: linear-gradient(135deg, #8b6cba, #7359a3);
             color: #fff;
         }
 
         .ranking-item.top-3 {
-            background: linear-gradient(135deg, rgba(168, 96, 122, 0.15), rgba(168, 96, 122, 0.05));
-            border-color: rgba(168, 96, 122, 0.3);
+            background: linear-gradient(135deg, rgba(74, 143, 184, 0.15), rgba(74, 143, 184, 0.05));
+            border-color: rgba(74, 143, 184, 0.3);
         }
 
         .ranking-item.top-3 .ranking-position {
-            background: linear-gradient(135deg, #a8607a, #8a4e65);
+            background: linear-gradient(135deg, #4a8fb8, #3d7a9e);
             color: #fff;
         }
 
@@ -1414,12 +1414,12 @@
                             <line x1="75" y1="50" x2="50" y2="75" stroke="currentColor" stroke-width="2" opacity="0.6"/>
                             <line x1="25" y1="50" x2="75" y2="50" stroke="currentColor" stroke-width="1.5" opacity="0.4"/>
                             <line x1="50" y1="25" x2="50" y2="75" stroke="currentColor" stroke-width="1.5" opacity="0.4"/>
-                            <!-- 节点 -->
-                            <circle cx="50" cy="25" r="10" fill="#ea2864" opacity="0.9"/>
-                            <circle cx="25" cy="50" r="8" fill="#d64570" opacity="0.85"/>
-                            <circle cx="75" cy="50" r="8" fill="#d64570" opacity="0.85"/>
+                            <!-- 节点 - 展示配色方案 -->
+                            <circle cx="50" cy="25" r="10" fill="#8b6cba" opacity="0.9"/>
+                            <circle cx="25" cy="50" r="8" fill="#6b6b78" opacity="0.9"/>
+                            <circle cx="75" cy="50" r="8" fill="#4a8fb8" opacity="0.9"/>
                             <circle cx="50" cy="75" r="12" fill="#ea2864"/>
-                            <circle cx="50" cy="50" r="6" fill="#a8607a" opacity="0.8"/>
+                            <circle cx="50" cy="50" r="6" fill="#8b6cba" opacity="0.85"/>
                             <!-- 外圈光晕 -->
                             <circle cx="50" cy="75" r="16" stroke="#ea2864" stroke-width="1" fill="none" opacity="0.3"/>
                         </svg>
@@ -1476,15 +1476,15 @@
                     <span class="legend-label" data-i18n="legendLow">少量连接</span>
                 </div>
                 <div class="legend-item">
-                    <div class="legend-circle" style="background: #a8607a; box-shadow: 0 0 10px rgba(168, 96, 122, 0.4);"></div>
+                    <div class="legend-circle" style="background: #4a8fb8; box-shadow: 0 0 10px rgba(74, 143, 184, 0.5);"></div>
                     <span class="legend-label" data-i18n="legendMid">一般连接</span>
                 </div>
                 <div class="legend-item">
-                    <div class="legend-circle" style="background: #d64570; box-shadow: 0 0 10px rgba(214, 69, 112, 0.4);"></div>
+                    <div class="legend-circle" style="background: #8b6cba; box-shadow: 0 0 10px rgba(139, 108, 186, 0.5);"></div>
                     <span class="legend-label" data-i18n="legendHigh">较多连接</span>
                 </div>
                 <div class="legend-item">
-                    <div class="legend-circle" style="background: #ea2864; box-shadow: 0 0 10px rgba(234, 40, 100, 0.5);"></div>
+                    <div class="legend-circle" style="background: #ea2864; box-shadow: 0 0 10px rgba(234, 40, 100, 0.6);"></div>
                     <span class="legend-label" data-i18n="legendTop">社交中心</span>
                 </div>
             </div>
@@ -2171,15 +2171,15 @@
                 // 使用缓存的最大连接数
                 const ratio = d.connections / (this.maxConnections || 1);
                 
-                // 从灰色渐变到粉红色（配色卡风格）
+                // 从灰色到主色渐变，增强辨识度
                 if (ratio < 0.25) {
-                    return '#6b6b78'; // 灰色
+                    return '#6b6b78'; // 灰色 - 少量连接
                 } else if (ratio < 0.5) {
-                    return '#a8607a'; // 浅粉
+                    return '#4a8fb8'; // 青蓝色 - 一般连接
                 } else if (ratio < 0.75) {
-                    return '#d64570'; // 深粉
+                    return '#8b6cba'; // 紫罗兰 - 较多连接
                 } else {
-                    return '#ea2864'; // 主色调粉红
+                    return '#ea2864'; // 主色调粉红 - 社交中心
                 }
             }
 
@@ -2322,8 +2322,11 @@
                 tooltip.style.top = (event.pageY - 10) + 'px';
                 tooltip.classList.add('visible');
 
-                // 高亮连接
-                this.highlightConnections(d);
+                // 只有未选中节点时，悬停才改变高亮
+                // 已选中节点时，悬停只显示 tooltip，需点击才切换
+                if (!this.selectedNode) {
+                    this.highlightConnections(d);
+                }
             }
 
             handleMouseOut(event, d) {
@@ -2333,6 +2336,7 @@
                 const tooltip = document.getElementById('tooltip');
                 tooltip.classList.remove('visible');
                 
+                // 已选中节点时保持高亮，未选中时清除
                 if (!this.selectedNode) {
                     this.clearHighlights();
                 }
